--- a/Web Development/Project/html/about.html
+++ b/Web Development/Project/html/about.html
@@ -4,11 +4,13 @@
 		<meta charset="UTF-8">
 		<title>About Us</title>
 		<link rel="icon" href="../images/smile.png">
+		<link rel="stylesheet" href="../css/style.css">
 	</head>
 	<body>
+		<div id="slidingBackground"></div>
 		<header lang="en">
 		<!-- Welcome -->
-			<h1 class="welcome">About Us</h1><hr>
+			<h1 class="welcome">About Us</h1>
 		</header>
 		
 		<nav class="nav">
@@ -16,20 +18,21 @@
 			<a href="../index.html">Home</a>
 			<a href="services.html">Services</a>
 			<a href="about.html">About Us</a>
-		</nav><hr>
+		</nav><br>
 		
 		<main lang="en">
 		<!-- About Us -->
-			<p id="quote"><q><strong>Absorb</strong> what is useful, <strong>discard</strong> what is useless, and <strong>add</strong> what is specifically <strong>your own.</strong></q> - Bruce Lee<p><hr>
+			<p id="quote"><q><strong>Absorb</strong> what is useful, <strong>discard</strong> what is useless, and <strong>add</strong> what is specifically <strong>your own.</strong></q> - Bruce Lee<p>
 			
-			<p id="about">This message is at the heart of <b>Fitness Planet</b>. We firmly believe our services and expertise are one of those useful things that should be absorbed.<br> 
-			We were founded with the idea that knowledge is for everyone, which is why we provide such helpful tools on our site for free.<br>
+			<p id="about">This message is at the heart of <b>Fitness Planet</b>. We firmly believe our services and expertise are one of those useful things<br> that should be absorbed.
+			We were founded with the idea that knowledge is for everyone, which is why we provide such<br> helpful tools on our site for free.
 			Don't think of us as just another gym, think of us as a <mark><em>path to a better you!</em></mark></p>
-		</main><hr>
-		
+		</main>
+	
 		<footer lang="en">
 		<!-- Author: Connor Cabrera, Date Developed 2/9/21 -->
-			<p class="Author">Created by: Connor Cabrera on 2/9/21</p>
+			<p class="author">Created by: Connor Cabrera on 2/9/21<br>
+			Last Edited: 3/14/21</p><br>
 		</footer>
 		
 	</body>
