--- a/Web Development/Project/html/services.html
+++ b/Web Development/Project/html/services.html
@@ -4,11 +4,13 @@
 		<meta charset="UTF-8">
 		<title>Services</title>
 		<link rel="icon" href="../images/smile.png">
+		<link rel="stylesheet" href="../css/style.css">
 	</head>
 	<body>
+		<div id="slidingBackground"></div>
 		<header lang="en">
 		<!-- Welcome -->
-			<h1 class="welcome">Services</h1><hr>
+			<h1 class="welcome">Services</h1>
 		</header>
 		
 		<nav class="nav">
@@ -16,7 +18,7 @@
 			<a href="../index.html">Home</a>
 			<a href="services.html">Services</a>
 			<a href="about.html">About Us</a>
-		</nav><hr>
+		</nav><br>
 		
 		<main lang="en" id="services">
 			<ul>
@@ -27,11 +29,12 @@
 				<li><abbr title="Total Daily Energy Expenditure">TDEE</abbr> Calculator<br>
 					<i>To be implemented once Javascript and PHP are learned in a form.</i></li>
 			</ul>
-		</main><hr>
+		</main>
 		
 		<footer lang="en">
 		<!-- Author: Connor Cabrera, Date Developed 2/9/21 -->
-			<p class="Author">Created by: Connor Cabrera on 2/9/21</p>
+			<p class="author">Created by: Connor Cabrera on 2/9/21<br>
+			Last Edited: 3/14/21</p><br>
 		</footer>
 		
 	</body>
