--- a/Web Development/Project/html/services.html
+++ b/Web Development/Project/html/services.html
@@ -17,6 +17,7 @@
 		<!-- Navigation to other pages -->
 			<a href="../index.html">Home</a>
 			<a href="services.html">Services</a>
+			<a href="register.html">Register</a>
 			<a href="about.html">About Us</a>
 		</nav><br>
 		
@@ -27,14 +28,14 @@
 				<li><a href="../misc_data/diet_tool.xlsx" download>Diet Tool</a><br><br>
 					<img src="../images/tool_screenshot.png" alt="Tool Photo" width="600"><br><br></li>
 				<li><abbr title="Total Daily Energy Expenditure">TDEE</abbr> Calculator<br>
-					<i>To be implemented once Javascript and PHP are learned in a form.</i></li>
+					<i>To be implemented soon.</i></li>
 			</ul>
 		</main>
 		
 		<footer lang="en">
 		<!-- Author: Connor Cabrera, Date Developed 2/9/21 -->
 			<p class="author">Created by: Connor Cabrera on 2/9/21<br>
-			Last Edited: 3/14/21</p><br>
+			Last Edited: 4/4/21</p><br>
 		</footer>
 		
 	</body>
