--- a/Web Development/Project/html/about.html
+++ b/Web Development/Project/html/about.html
@@ -17,6 +17,7 @@
 		<!-- Navigation to other pages -->
 			<a href="../index.html">Home</a>
 			<a href="services.html">Services</a>
+			<a href="register.html">Register</a>
 			<a href="about.html">About Us</a>
 		</nav><br>
 		
@@ -32,7 +33,7 @@
 		<footer lang="en">
 		<!-- Author: Connor Cabrera, Date Developed 2/9/21 -->
 			<p class="author">Created by: Connor Cabrera on 2/9/21<br>
-			Last Edited: 3/14/21</p><br>
+			Last Edited: 4/4/21</p><br>
 		</footer>
 		
 	</body>
